fix(Layout): Show scrollbar if required

--- a/app/main.sass
+++ b/app/main.sass
@@ -121,6 +121,7 @@ header.header
         background-color: $off-black
         border-top: 1px $silver dashed
         border-bottom: 1px $silver dashed
+        overflow: auto
 
     @media screen and (min-width: $small-screen-min)
         height: 75%
